# yapper

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
config/: pipeline.toml
data/refs/: RushHour1_final.zh.json
deploy/: Dockerfile  README.md  docker-compose.yml
deploy/compose/: docker-compose.base.yml
deploy/env/: local.env
deploy/grafana/dashboards/: cost.json  fleet-overview.json  yapper.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/k8s/base/: api.yaml  config.yaml  datastores.yaml  kustomization.yaml  workers.yaml
deploy/k8s/overlays/local/: kustomization.yaml  minio.yaml  patch-config.yaml  patch-secret.yaml
deploy/k8s/overlays/prod/: gpu-tunnel.yaml  kustomization.yaml  observability.yaml  patch-config.yaml  patch-ingress.yaml  patch-workers.yaml
deploy/prometheus/: alerts.yml  prometheus.yml  scrape.yml
deploy/promtail/: promtail.yml
deploy/terraform/: README.md  app.tf  dns.tf  observability.tf  outputs.tf  s3.tf  secrets.tf  terraform.tfvars.example  variables.tf
docs/: architecture.html  resume_bullets.md
jieshuoforge/: __init__.py  cli.py  db.py  pipeline.py  schemas.py  textutil.py  timing.py
jieshuoforge/ffmpeg/: graph.py  probe.py  run.py
jieshuoforge/llm/: client.py  prompts.py
jieshuoforge/server_clients/: asr_client.py  tts_client.py
jieshuoforge/stages/: s00_ingest.py  s01_audio.py  s02_asr.py  s04_scenes_keyframes.py  s06_understand.py  s07_script.py  s08_budget.py  s09_tts.py  s10_edl.py  s11_subs.py  s12_render.py
scripts/: build_and_load.sh  build_and_push.sh  build_narrator_ref.py  deploy.sh  gen_protos.sh  gpu_tunnel.sh  run_local_compose.sh  separate_score.py  setup_check.sh  tf.sh
scripts/lib/: gpu.sh
server/: README_deploy.md  _metrics.py  asr_service.py  gpud.py  requirements.txt  setup_gpu.sh  tts_service.py  verify_gpu.sh
server/asr/: pyproject.toml
server/tts/: pyproject.toml
tests/: test_clip_ref_grounding.py  test_context_assembly.py  test_context_tags.py  test_edl_to_ffmpeg.py  test_runtime_budget.py  test_server_clients.py  test_subtitles.py
yapper/: __init__.py  cli.py  config.py  pipeline.py  schemas.py  storage.py  textutil.py  timing.py
yapper/ffmpeg/: graph.py  probe.py  run.py
yapper/llm/: client.py  prompts.py
yapper/server_clients/: asr_client.py  tts_client.py
yapper/stages/: s00_ingest.py  s02_asr.py  s03_shots.py  s04_scenes_keyframes.py  s05_context.py  s06_understand.py  s07_script.py  s08_budget.py  s09_tts.py  s10_edl.py  s11_subs.py  s12_render.py
yapper_rpc/: __init__.py  asr.proto  asr_pb2.py  asr_pb2_grpc.py  gpud.proto  gpud_pb2.py  gpud_pb2_grpc.py  tts.proto  tts_pb2.py  tts_pb2_grpc.py
yapper_web/: __init__.py  api.py  budget.py  db.py  gpu_supervisor.py  logging_config.py  metrics.py  settings.py  storage.py  tasks.py
yapper_web/static/: index.html
