[project]
name = "jieshuoforge"
version = "0.1.0"
description = "Automated movie -> 10-15 min Mandarin narrated recap (电影解说) pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "scenedetect>=0.6.7",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "pillow>=10.0",
    "openai>=1.40",
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
jieshuo = "jieshuoforge.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jieshuoforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
