[project]
name = "yapper"
version = "0.1.0"
description = "Yapper — automated funny Mandarin commentary (短片解說) for movies and short clips"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "scenedetect>=0.6.7",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "pillow>=10.0",
    "openai>=1.40",
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# Web platform shell (FastAPI + Celery + S3). The CLI/core never imports these;
# install with `uv sync --extra web` (or `pip install .[web]`) only on the server.
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "celery>=5.4",
    "redis>=5.0",
    "boto3>=1.34",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "prometheus-client>=0.20",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "tzdata>=2024.1",                  # zoneinfo data in slim images: PDT/PST id timestamps
    # gRPC transport to the GPU services (ASR/TTS)
    "grpcio>=1.60",
    "protobuf>=4.25",
    "grpcio-health-checking>=1.60",
]

[project.scripts]
yap = "yapper.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
# Build-time only: regenerate gRPC stubs with `bash scripts/gen_protos.sh`.
proto = [
    "grpcio-tools>=1.60",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yapper", "yapper_web", "yapper_rpc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
